--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
 *.class
+*.apk
+*.ap_
+*.dex
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# generated files
+bin/
+gen/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+
+#NDK
+obj/
 
 # Package Files #
 *.jar
